src/styles/style.css
@import url("https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Vazirmatn:wght@100..900&display=swap");

:root,
:root.dark {
  --bg-color: #0a0a0a;
  --color: #fefefe;
  --yellow: #f2ff57;
  --primary: #f2ff57;
  --gray: #707070;
  font-size: 16px;
  font-family: "Inter", sans-serif;
}

html,
body {
  height: 100%;
  width: 100%;
}

#container {
  background-color: var(--bg-color);
  height: inherit;
  width: inherit;
  color: var(--color);
  text-align: center;
  display: flex;
  flex-direction: column;
  justify-content: center;
  row-gap: 3rem;
  padding: 2rem 0;
  width: 100%;
  height: 100%;
  background: url("../assets/images/rdr2.jpg");
  background-repeat: round;
  position: relative;
  z-index: 0;
}

#container::after {
  content: "";
  position: absolute;
  z-index: 1;
  background-color: rgba(0, 0, 0, 0.9);
  width: 100%;
  height: 100%;
}

#container .home-header {
  font-size: 2.5rem;
  position: relative;
  z-index: 2;
}

#container .home-header::after {
  position: absolute;
  content: "";
  width: 200px;
  height: 1px;
  background-color: var(--primary);
  bottom: -1rem;
  left: 50%;
  transform: translateX(-50%);
  border-radius: 1rem;
}

#container .slider-container {
  width: 100%;
  position: relative;
  overflow: hidden;
  z-index: 2;
}

#container .slider-container .images-container {
  width: 100%;
  display: flex;
  align-items: center;
  padding: 2rem 4rem;
  justify-content: center;
  transition: all 0.5s cubic-bezier(0.175, 0.885, 0.32, 1.275);
}

.slide {
  transform: scale(0.85);
  width: 1000px;
  opacity: 0.4;
  flex-shrink: 0;
  object-fit: cover;
}

.slide img {
  width: 100%;
  height: 100%;
  border-radius: 1rem;
  -webkit-filter: grayscale(100%);
  filter: grayscale(100%);
}

.active-slide {
  transform: scale(1);
  opacity: 1;
  position: relative;
  box-shadow: 0 0;
}

.active-slide::after {
  content: "";
  position: absolute;
  bottom: 0;
  left: 0;
  width: 100%;
  height: 60%;
  background: linear-gradient(to top, rgba(0, 0, 0, 0.9) 20%, transparent 100%);
  transition: opacity 0.5s ease;
  opacity: 1;
  z-index: 2;
  border-radius: 2.9rem;
}

.active-slide img {
  border-radius: 3rem;
  -webkit-filter: grayscale(0%);
  filter: grayscale(0%);
}

.text-container {
  color: var(--color);
  line-height: 2;
  position: absolute;
  bottom: 5%;
  left: 50%;
  transform: translateX(-50%);
  width: 1000px;
  border-bottom-right-radius: 4rem;
  border-bottom-left-radius: 4rem;
  padding: 1.1rem 2rem;
  display: grid;
  grid-template-areas:
    "head head"
    "txt btn";
}

.text-container h1 {
  grid-area: head;
  text-transform: uppercase;
  text-align: left;
  transition: all 0.3s cubic-bezier(0.175, 0.885, 0.32, 1.275);
}

.text-container p {
  color: #707070;
  grid-area: txt;
  width: 70%;
  text-align: left;
  transition: all 0.3s cubic-bezier(0.175, 0.885, 0.32, 1.275);
}

.text-container .btn {
  grid-area: btn;
  background-color: transparent;
  border: 2px solid var(--primary);
  border-radius: 1rem;
  padding: 1rem 2rem;
  color: var(--primary);
  font-weight: 800;
  font-size: 1rem;
  transition: all 0.2s ease;
  cursor: pointer;
}

.text-container .btn:hover {
  transform: scale(1.05);
  font-size: 1.05rem;
}

.switch-slide-container {
  position: absolute;
  top: 50%;
  transform: translateY(-50%);
  left: 50%;
  transform: translateX(-50%);
  width: 1060px;
  display: flex;
  justify-content: space-between;
}

.switch-slide-container a {
  background-color: rgba(48, 48, 48, 0.7);
  padding: 1rem;
  border-radius: 50%;
  width: 4rem;
  height: 4rem;
  display: flex;
  justify-content: center;
  align-items: center;
  font-size: 2.2rem;
  cursor: pointer;
}

